# theme

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dysonsphere.toml  pyproject.toml
dkkung_altair_theme/: __init__.py  colors.py  dkkung_altair_theme.py  helpers.py  transforms.py
docs/: gallery.html  index.html
dysonsphere/: __init__.py  config.py  export.py  layers.py  marks.py  metadata.py  multilabel.py  nonlinear.py  palettes.py  statistics.py  theme.py  transforms.py  utils.py
scripts/plot/: boxplot.py  p-value.py  sequences.py  strip.py
scripts/plots/: boxplot.py  logarithmic.py  reference_lines.py  strip_manual.py
tests/: conftest.py  test_export.py  test_metadata.py  test_palettes.py  test_statistics.py  test_theme.py
theme/: __init__.py  colors.py  helpers.py  layers.py  palettes.py  theme.py  transforms.py
website/: astro.config.mjs  package-lock.json  package.json
website/public/charts/: bar-dark.json  bar-light.json  comparisons-dark.json  comparisons-light.json  correlation-dark.json  correlation-light.json  log-dark.json  log-light.json  strip-dark.json  strip-light.json  violin-dark.json  violin-light.json
website/scripts/: gen_examples.py
website/src/components/: Chart.astro  Playground.astro
website/src/content/docs/: index.mdx  playground.mdx
website/src/content/docs/guides/: getting-started.md
website/src/styles/: theme.css
