[project]
name = "altair-themes"
version = "0.1.0"
description = "Custom global themes for altair."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "numpy>=1.26.0",
    "polars>=1.19.0",
    "pyarrow>=19.0.1",
    "scipy>=1.15.2",
    "vega-datasets>=0.9.0",
    "vegafusion>=2.0.1",
    "vl-convert-python>=1.7.0",
]
