[project]
name = "dysonsphere"
version = "1.0.0"
description = "An Altair configuration wrapper with perceptually uniform palettes and chart utilities for publication-ready figures."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "dkkung", email = "128324842+dkkung@users.noreply.github.com" }]
keywords = ["altair", "vega-lite", "visualization", "data visualization", "colormap", "palette", "theme"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "numpy>=1.26.0",
    "polars[pyarrow]>=1.19.0",
    "scipy>=1.11.0",
]

[dependency-groups]
dev = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "pytest>=9.0.0",
    "ruff>=0.15.17",
    "ty>=0.0.0",
    "vl-convert-python>=1.7.0",
]

[project.urls]
Repository = "https://github.com/dkkung/dysonsphere"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dysonsphere"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
